[tool.poetry]
name = "final-desarrollo-humano-infantil"
version = "0.1.0"
description = ""
authors = ["diego-pardo-wp <ext.dpardo@warbyparker.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
